[gd_scene load_steps=22 format=3 uid="uid://dxvsatf2vb8ye"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_w2ou4"]
[ext_resource type="Texture2D" uid="uid://0r2nfll8ytma" path="res://sprites/tilemap1 revamp.png" id="2_jnuwk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_upifn"]
atlas = ExtResource("2_jnuwk")
region = Rect2(0, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncgjp"]
atlas = ExtResource("2_jnuwk")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkjkm"]
atlas = ExtResource("2_jnuwk")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qchq"]
atlas = ExtResource("2_jnuwk")
region = Rect2(8, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_trs56"]
atlas = ExtResource("2_jnuwk")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_omhpn"]
atlas = ExtResource("2_jnuwk")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wywwi"]
atlas = ExtResource("2_jnuwk")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa40g"]
atlas = ExtResource("2_jnuwk")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u10j"]
atlas = ExtResource("2_jnuwk")
region = Rect2(0, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d3jl"]
atlas = ExtResource("2_jnuwk")
region = Rect2(16, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6yhd"]
atlas = ExtResource("2_jnuwk")
region = Rect2(8, 16, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_b0dgc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_upifn")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncgjp")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkjkm")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qchq")
}],
"loop": true,
"name": &"pencil",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_trs56")
}],
"loop": true,
"name": &"slide move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omhpn")
}],
"loop": true,
"name": &"slide stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wywwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa40g")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u10j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d3jl")
}],
"loop": true,
"name": &"wall climb",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6yhd")
}],
"loop": true,
"name": &"wall slide",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yd8j"]
size = Vector2(99, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umkib"]
size = Vector2(10, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26sro"]
size = Vector2(11, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4m6a"]
size = Vector2(97, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6b4y"]
size = Vector2(93, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svp5c"]
size = Vector2(93, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmmm4"]
size = Vector2(97, 111)

[node name="Player" type="CharacterBody2D"]
position = Vector2(-9, -16)
script = ExtResource("1_w2ou4")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(7, -7.62939e-06)
scale = Vector2(12, 16)
sprite_frames = SubResource("SpriteFrames_b0dgc")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.5, -0.5)
shape = SubResource("RectangleShape2D_7yd8j")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="stun timer" type="Timer" parent="."]

[node name="frontflip duration" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="penciling fall cancel timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="front handspring duration" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="right walljump radius" type="Area2D" parent="."]

[node name="walljump collision right" type="CollisionShape2D" parent="right walljump radius"]
position = Vector2(62, -0.5)
shape = SubResource("RectangleShape2D_umkib")

[node name="left walljump radius" type="Area2D" parent="."]
position = Vector2(7.5, -0.5)

[node name="walljump collision left" type="CollisionShape2D" parent="left walljump radius"]
position = Vector2(-55, 0)
shape = SubResource("RectangleShape2D_26sro")

[node name="slide collision detect" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="slide collion" type="CollisionShape2D" parent="slide collision detect"]
position = Vector2(7.5, -30)
shape = SubResource("RectangleShape2D_r4m6a")

[node name="penciling check bottom" type="Area2D" parent="."]
position = Vector2(6.5, 85)

[node name="pencil check col bottom" type="CollisionShape2D" parent="penciling check bottom"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_d6b4y")

[node name="penciling check top" type="Area2D" parent="."]

[node name="pencil check col top" type="CollisionShape2D" parent="penciling check top"]
position = Vector2(7.5, -30)
shape = SubResource("RectangleShape2D_svp5c")

[node name="killbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="killbox^2" type="CollisionShape2D" parent="killbox"]
position = Vector2(7.5, 8.5)
shape = SubResource("RectangleShape2D_hmmm4")

[connection signal="timeout" from="frontflip duration" to="." method="_on_frontflip_duration_timeout"]
[connection signal="timeout" from="penciling fall cancel timer" to="." method="_on_penciling_fall_cancel_timer_timeout"]
[connection signal="timeout" from="front handspring duration" to="." method="_on_front_handspring_duration_timeout"]
[connection signal="body_entered" from="right walljump radius" to="." method="_on_right_walljump_radius_body_entered"]
[connection signal="body_exited" from="right walljump radius" to="." method="_on_right_walljump_radius_body_exited"]
[connection signal="body_entered" from="left walljump radius" to="." method="_on_right_walljump_radius_2_body_entered"]
[connection signal="body_exited" from="left walljump radius" to="." method="_on_walljump_radius_body_exited"]
[connection signal="area_entered" from="slide collision detect" to="." method="_on_slide_collision_detect_area_entered"]
[connection signal="body_entered" from="slide collision detect" to="." method="_on_slide_collision_detect_body_entered"]
[connection signal="body_exited" from="slide collision detect" to="." method="_on_slide_collision_detect_body_exited"]
[connection signal="body_entered" from="penciling check bottom" to="." method="_on_penciling_check_bottom_body_entered"]
[connection signal="body_exited" from="penciling check bottom" to="." method="_on_penciling_check_bottom_body_exited"]
[connection signal="body_entered" from="penciling check top" to="." method="_on_penciling_check_top_body_entered"]
[connection signal="body_exited" from="penciling check top" to="." method="_on_penciling_check_top_body_exited"]
[connection signal="body_entered" from="killbox" to="." method="_on_killbox_body_entered"]
